Added explore section, sticky navbar

--- a/src/public/main.html
+++ b/src/public/main.html
@@ -17,15 +17,15 @@
 </head>
 <body>
     <main>
-        <nav class="absolute text-white w-full bg-gradient-to-b from-[#0066CC] to-black h-28 pt-4 sticky-0">
-            <div class="mt-3">
-                <a class ="border-2 rounded-lg ml-24 p-3" href="#">
-                    Stocks Right Now
+        <nav class="bg-black fixed text-white w-full bg-gradient-to-b from-[#0066CC] to-black h-28 pt-4 sticky-0">
+            <div class="mt-6 border-10 rounded-lg">
+                <a class ="border-2 rounded-lg ml-24 p-3 hover:bg-gray-200 hover:text-black" href="#">
+                    The Market
                 </a>
-                <a class ="border-2 rounded-lg ml-12 p-3" href="#">
+                <a class ="border-2 rounded-lg ml-12 p-3 hover:bg-gray-200 hover:text-black" href="#">
                     News
                 </a>
-                <a class ="border-2 rounded-lg ml-12 p-3"href="#">
+                <a class ="border-2 rounded-lg ml-12 p-3 hover:bg-gray-200 hover:text-black"href="#">
                     My Portfolio
                 </a>
             </div>
@@ -33,16 +33,24 @@
 
 
     </main>
-    <div class="bg-black" id="top-graphic-canvas">
-        <div class="" id="top-graphic">
+    <div class="bg-black bg-gradient-to-b from-black to gray" id="top-graphic-canvas">
+        <div class="pt-28" id="top-graphic">
             <script type="module" src="main.js"></script>
         </div>
-        <!-- <script type="module" src="main.js"></script> -->
     </div>
-    <div>
-        <p>
-            Testing
-        </p>
+    <div class="flex flex-col pl-20 pr-20 m-20">
+        <h1 class="font-semibold text-2xl">Explore</h1>
+        <hr class="w-160 h-0.5 my-4 bg-gray-900 border-0 dark:bg-gray-700">
+        <div id="explore-section" class="flex flex-row">
+            <div id="explore-subsection" class="m-20">
+
+            </div>
+            <div id="explore-subsection" class="m-20">
+
+            </div>
+            <div id="explore-subsection" class="m-20">
+            </div>
+        </div>
     </div>
 </body>
 
