--- a/src/public/main.html
+++ b/src/public/main.html
@@ -51,16 +51,20 @@
         <div id="explore-section" class="flex flex-row">
             <div id="explore-subsection" class="m-20">
             </div>
-            <div id="explore-subsection-1" class="m-20">
+            <div id="explore-subsection" class="m-20">
             </div>
-            <div id="explore-subsection-2" class="m-20">
+            <div id="explore-subsection" class="m-20">
             </div>
         </div>
         <h1 class="font-semibold text-2xl">Today's Front Page</h1>
         <hr class="w-160 h-0.5 my-4 bg-gray-900 border-0 dark:bg-gray-700">
         <div id="explore-section" class="flex flex-row">
             <script type="module" src="news.js"></script>
-            <div id="explore-subsection-3" class="m-20">
+            <div id="explore-subsection-0" class="m-20">
+            </div>
+            <div id="explore-subsection-1" class="m-20">
+            </div>
+            <div id="explore-subsection-2" class="m-20">
             </div>
         </div>
     </div>
