--- a/client/public/main.html
+++ b/client/public/main.html
@@ -48,19 +48,13 @@
     <div class="flex flex-col pl-20 pr-20 m-20">
         <h1 class="font-semibold text-2xl">Explore</h1>
         <hr class="w-160 h-0.5 my-4 bg-gray-900 border-0 dark:bg-gray-700">
-        <div id="explore-section" class="flex flex-row">
-            <div id="explore-subsection" class="m-20">
-            </div>
-            <div id="explore-subsection" class="m-20">
-            </div>
-            <div id="explore-subsection" class="m-20">
-            </div>
+        <div id="explore-section-0" class="flex flex-row">
         </div>
         <h1 class="font-semibold text-2xl">Today's Front Page</h1>
         <hr class="w-160 h-0.5 my-4 bg-gray-900 border-0 dark:bg-gray-700">
-        <div id="explore-section" class="flex flex-row">
-            <script type="module" src=""></script>
-            <article id="explore-subsection-0" class="m-20">
+        <div id="explore-section-1" class="flex flex-row justify-center">
+            <script type="module" src="news.js"></script>
+            <!-- <article id="explore-subsection-0" class="m-20">
                 <img src="placeholder.jpeg" alt="Hu Tao The Placeholder" class="max-w-l max-h-60">
                 <p>
                     Lorem ipsum
@@ -77,7 +71,7 @@
                 <p>
                     Lorem ipsum
                 </p>
-            </div>
+            </div> -->
         </div>
     </div>
 </body>
