--- a/client/src/main.html
+++ b/client/src/main.html
@@ -14,6 +14,7 @@
             }
         }
     </script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/klinecharts/dist/umd/klinecharts.min.js"></script>
 </head>
 <body>
     <main>
@@ -49,6 +50,25 @@
         <h1 class="font-semibold text-2xl">Explore</h1>
         <hr class="w-160 h-0.5 my-4 bg-gray-900 border-0 dark:bg-gray-700">
         <div id="explore-section-0" class="flex flex-row">
+            <script type="module" src="charts.js"></script>
+            <div id="chart" style="width:340px;height:300px" class="m-20">
+                <!-- <img src="../public/placeholder.jpeg" alt="Hu Tao The Placeholder" class="max-w-l max-h-60">
+                <p>
+                    Lorem ipsum
+                </p> -->
+            </div>
+            <div id="chart-1" style="width:340px;height:300px" class="m-20">
+                <!-- <img src="../public/placeholder.jpeg" alt="Hu Tao The Placeholder" class="max-w-l max-h-60">
+                <p>
+                    Lorem ipsum
+                </p> -->
+            </div>
+            <div id="chart-2" style="width:340px;height:300px" class="m-20">
+                <!-- <img src="../public/placeholder.jpeg" alt="Hu Tao The Placeholder" class="max-w-l max-h-60">
+                <p>
+                    Lorem ipsum
+                </p> -->
+            </div>
         </div>
         <h1 class="font-semibold text-2xl">Today's Front Page</h1>
         <hr class="w-160 h-0.5 my-4 bg-gray-900 border-0 dark:bg-gray-700">
